--- a/src/app/views/clientes/clientes.component.html
+++ b/src/app/views/clientes/clientes.component.html
@@ -1,40 +1,72 @@
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Cliente</h5>
-    <div class="button-container">
+    <div class="button-container" *ngIf="!mostrarFormularioEditar">
       <button id="guardar-persona" (click)="ingresarPersona()">Ingresar Persona</button>
     </div>
-    <div *ngIf="mostrarFormularioIngreso">
+    <div *ngIf="mostrarFormularioIngreso && !mostrarFormularioEditar">
       <form [formGroup]="registerFormIn" (ngSubmit)="onSubmit2()">
         <h1>Ingresar Persona</h1>
         <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilUser"></svg>
           </span>
-          <input formControlName="cedula" cFormControl placeholder="Cedula" />
+          <input formControlName="cedula" cFormControl placeholder="Cedula"
+                 data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                 [class.is-invalid]="registerFormIn.get('cedula')?.invalid && (registerFormIn.get('cedula')?.touched || registerFormIn.get('cedula')?.dirty)"
+                 (mouseenter)="showCedulaTooltip()" (mouseleave)="hideCedulaTooltip()"
+          />
+          <div *ngIf="showTooltip" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+            <div class="arrow"></div>
+            <span>Debe escribir una cedula valida.</span>
+          </div>
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilUser"></svg>
           </span>
-          <input formControlName="nombre" cFormControl placeholder="Nombre" />
+          <input formControlName="nombre" cFormControl placeholder="Nombre"
+                 data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                 [class.is-invalid]="registerFormIn.get('nombre')?.invalid && (registerFormIn.get('nombre')?.touched || registerFormIn.get('nombre')?.dirty)"
+                 (mouseenter)="showNombreTooltip()" (mouseleave)="hideNombreTooltip()"
+          />
+          <div *ngIf="showTooltip2" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+            <div class="arrow"></div>
+            <span>Ingrese un nombre.</span>
+          </div>
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilUser"></svg>
           </span>
-          <input formControlName="apellido" cFormControl placeholder="Apellido" />
+          <input formControlName="apellido" cFormControl placeholder="Apellido"
+                 data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                 [class.is-invalid]="registerFormIn.get('apellido')?.invalid && (registerFormIn.get('apellido')?.touched || registerFormIn.get('apellido')?.dirty)"
+                 (mouseenter)="showApellidoTooltip()" (mouseleave)="hideApellidoTooltip()"
+          />
+          <div *ngIf="showTooltip3" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+            <div class="arrow"></div>
+            <span>Ingrese un apellido.</span>
+          </div>
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilCreditCard"></svg>
           </span>
-          <select class="form-select" formControlName="rol" cFormControl>
+          <select class="form-select" formControlName="rol" cFormControl
+                  data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                  [class.is-invalid]="registerFormIn.get('rol')?.invalid && (registerFormIn.get('rol')?.touched || registerFormIn.get('rol')?.dirty)"
+                  (mouseenter)="showRolTooltip()" (mouseleave)="hideRolTooltip()"
+          >
             <option value="" disabled selected>Seleccione un Rol</option>
             <option *ngFor="let rol of roles" [value]="rol.id_rol">
               {{ rol.rol }}
             </option>
           </select>
+          <div *ngIf="showTooltip4" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+            <div class="arrow"></div>
+            <span>Ingrese un rol.</span>
+          </div>
         </c-input-group>
         <div class="d-grid">
           <button cButton color="success" type="submit">Guardar Persona</button>
@@ -44,66 +76,104 @@
         </div>
       </form>
     </div>
-    <table class="table table-bordered table-striped">
-      <thead>
-      <tr>
-        <th>Cedula</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Rol</th>
-        <th>Fecha Registro</th>
-        <th>Editar</th>
-        <th>Eliminar</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let persona of personas  | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
-        <td>{{ persona.cedula }}</td>
-        <td>{{persona.nombre}}</td>
-        <td>{{ persona.apellido }}</td>
-        <td>{{ persona.rol.rol}}</td>
-        <td>
-          {{ persona.fecha_registro ? persona.fecha_registro.toString().split("T")[0] : 'NA' }}
-        </td>
-        <td>
-          <button type="button" name="button" (click)="edit(i)" class="btn btn-primary">Editar</button>
-        </td>
-        <td>
-          <button type="button" (click)="eliminarPersona(persona.id_persona)" class="btn btn-danger">Eliminar</button>
-        </td>
-      </tr>
-      <tr *ngIf="filaEditada !== null">
-        <td [attr.colspan]="8">
+    <div *ngIf="!mostrarFormularioIngreso &&!mostrarFormularioEditar">
+      <table class="table table-bordered table-striped">
+        <thead>
+        <tr>
+          <th>Cedula</th>
+          <th>Nombre</th>
+          <th>Apellido</th>
+          <th>Rol</th>
+          <th>Fecha Registro</th>
+          <th>Editar</th>
+          <th>Eliminar</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let persona of personas  | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+          <td>{{ persona.cedula }}</td>
+          <td>{{persona.nombre}}</td>
+          <td>{{ persona.apellido }}</td>
+          <td>{{ persona.rol.rol}}</td>
+          <td>
+            {{ persona.fecha_registro ? persona.fecha_registro.toString().split("T")[0] : 'NA' }}
+          </td>
+          <td>
+            <button type="button" name="button" (click)="edit(i)" class="btn btn-primary"><svg cIcon name="cilPencil" size="lg"></svg></button>
+          </td>
+          <td>
+            <button type="button" (click)="eliminarPersona(persona.id_persona)" class="btn btn-danger"><svg cIcon name="cilTrash" size="lg"></svg></button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+      <div class="d-flex justify-content-center mt-3">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+      </div>
+    </div>
+    <div *ngIf="filaEditada !== null &&!mostrarFormularioIngreso &&mostrarFormularioEditar">
           <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <h1>Editar</h1>
             <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilUser"></svg>
           </span>
-              <input formControlName="cedula" cFormControl placeholder="Cedula" />
+              <input formControlName="cedula" cFormControl placeholder="Cedula"
+                     data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                     [class.is-invalid]="registerForm.get('cedula')?.invalid && (registerForm.get('cedula')?.touched || registerForm.get('cedula')?.dirty)"
+                     (mouseenter)="showCedula2Tooltip()" (mouseleave)="hideCedula2Tooltip()"
+              />
+              <div *ngIf="showTooltip5" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+                <div class="arrow"></div>
+                <span>Debe escribir una cedula valida.</span>
+              </div>
             </c-input-group>
             <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilUser"></svg>
           </span>
-              <input formControlName="nombre" cFormControl placeholder="Nombre" />
+              <input formControlName="nombre" cFormControl placeholder="Nombre"
+                     data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                     [class.is-invalid]="registerForm.get('nombre')?.invalid && (registerForm.get('nombre')?.touched || registerForm.get('nombre')?.dirty)"
+                     (mouseenter)="showNombre2Tooltip()" (mouseleave)="hideNombre2Tooltip()"
+              />
+              <div *ngIf="showTooltip6" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+                <div class="arrow"></div>
+                <span>Ingrese un nombre.</span>
+              </div>
             </c-input-group>
             <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilUser"></svg>
           </span>
-              <input formControlName="apellido" cFormControl placeholder="Apellido" />
+              <input formControlName="apellido" cFormControl placeholder="Apellido"
+                     data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                     [class.is-invalid]="registerForm.get('apellido')?.invalid && (registerForm.get('apellido')?.touched || registerForm.get('apellido')?.dirty)"
+                     (mouseenter)="showApellido2Tooltip()" (mouseleave)="hideApellido2Tooltip()"
+              />
+              <div *ngIf="showTooltip7" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+                <div class="arrow"></div>
+                <span>Ingrese un apellido.</span>
+              </div>
             </c-input-group>
             <c-input-group class="mb-3">
           <span cInputGroupText>
             <svg cIcon name="cilCreditCard"></svg>
           </span>
-              <select class="form-select" formControlName="rol" cFormControl>
+              <select class="form-select" formControlName="rol" cFormControl
+                      data-bs-toggle="tooltip" data-bs-placement="top-center" title=" "
+                      [class.is-invalid]="registerForm.get('rol')?.invalid && (registerForm.get('rol')?.touched || registerForm.get('rol')?.dirty)"
+                      (mouseenter)="showRol2Tooltip()" (mouseleave)="hideRol2Tooltip()"
+              >
                 <option value="" disabled selected>Seleccione un Rol</option>
                 <option *ngFor="let rol of roles" [value]="rol.id_rol">
                   {{ rol.rol }}
                 </option>
               </select>
+              <div *ngIf="showTooltip8" class="tooltip-container position-absolute top-0 end-0 p-2 bg-white rounded border border-danger text-danger">
+                <div class="arrow"></div>
+                <span>Ingrese un rol.</span>
+              </div>
             </c-input-group>
             <div class="d-grid">
               <button cButton color="success" type="submit">Guardar Cambios</button>
@@ -112,12 +182,6 @@
               <button cButton color="secondary" type="button" (click)="cancelarEdicion()">Cancelar</button>
             </div>
           </form>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-    <div class="d-flex justify-content-center mt-3">
-      <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
   </div>
 </div>
