--- a/src/app/views/prestamo/prestamo.component.scss
+++ b/src/app/views/prestamo/prestamo.component.scss
@@ -13,16 +13,19 @@
     background-color: #249542;
 }
 
-.tooltip-container {
-  z-index: 1050; /* Asegura que el tooltip esté por encima de otros elementos */
-}
+  .tooltip-container {
+    position: absolute; /* Asegura que el tooltip no afecte al flujo normal de la página */
+    transform: translateX(-120%);
+  }
 
-.tooltip-container .arrow {
-  position: absolute;
-  top: 100%; /* Posiciona la flecha del tooltip */
-  right: 0;
-  border-width: 0.5rem;
-  border-style: solid;
-  border-color: transparent;
-  border-top-color: #dc3545; /* Color del borde del tooltip */
-}
+  .tooltip-container .arrow {
+    position: absolute;
+    top: 100%; /* Posiciona la flecha del tooltip */
+    right: 20px;
+    border-width: 0.5rem;
+    border-style: solid;
+    border-color: transparent;
+    border-top-color: #dc3545; /* Color del borde del tooltip */
+  }
+
+
